Avoid use of deprecated Class.newInstance().